--- a/tripstack-starter/tripstack/apps/admin/package.json
+++ b/tripstack-starter/tripstack/apps/admin/package.json
@@ -15,6 +15,7 @@
     "vite": "^5.4.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.23",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@vitejs/plugin-react": "^4.3.1"
   }
 }
