--- a/tripstack-starter/tripstack/infra/wrangler.toml
+++ b/tripstack-starter/tripstack/infra/wrangler.toml
@@ -12,8 +12,8 @@ new_classes = ["ChatRoom"]
 
 [[d1_databases]]
 binding = "DB"
-database_name = "${CF_D1_DB_NAME}"
-database_id = "${CF_D1_DB_ID}"
+database_name = "tripstack_db"
+database_id = "bec46d77-3379-4c3c-b3fa-5c229ac83e35"
 migrations_dir = "../packages/db/migrations"
 
 [[kv_namespaces]]
