--- a/tripstack-starter/tripstack/apps/mobile/package.json
+++ b/tripstack-starter/tripstack/apps/mobile/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tripstack/mobile",
   "private": true,
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start"
   },
