--- a/tripstack-starter/tripstack/apps/mobile/package.json
+++ b/tripstack-starter/tripstack/apps/mobile/package.json
@@ -3,11 +3,15 @@
   "private": true,
   "main": "expo/AppEntry",
   "scripts": {
-    "start": "expo start"
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "expo": "^51.0.0",
+    "expo-dev-client": "~4.0.29",
     "react": "18.2.0",
     "react-native": "0.74.3"
-  }
+  },
+  "version": "1.0.0"
 }
